examples/test/testpolicy44.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy44
  namespace: namespace77
spec:
  podSelector:
    matchLabels:
      key7: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value20
          key7: value20
      podSelector:
        matchLabels:
          key0: value23
          key11: value6
          key19: value12
